# erc721-sample-marketplace-implementation

./: .env.example  .gitignore  Dockerfile  Procfile.dev  README.md  docker-compose.yaml  docker-entrypoint.sh  package.json
api/: .env.example  manage.py  pyproject.toml  run.sh
api/auth/: apps.py  urls.py  views.py
api/items/: admin.py  fields.py  filters.py  managers.py  models.py  serializers.py  urls.py  validators.py  views.py
api/items/migrations/: 0001_initial.py  0002_auto_20210520_0426.py  0003_auto_20210520_0432.py  0004_item_likes.py  0005_alter_item_likes.py  0006_auto_20210521_0827.py  0007_item_cover_img.py  0008_item_type.py  0009_alter_item_seller.py  0010_auto_20210527_0851.py  0011_auto_20210527_0937.py  0012_auto_20210527_0944.py  0013_item_token_sold.py  0014_auto_20210527_1022.py  0015_auto_20210608_0745.py  0016_auto_20210608_0746.py  0017_alter_item_contract_address.py  0018_auto_20210615_1525.py  0019_auto_20210616_1620.py  0020_alter_item_sell_type.py  0021_auto_20210618_1057.py  0022_auto_20210621_1042.py  0022_auto_20210621_1138.py  0023_auto_20210621_1304.py  0023_auto_20210622_0740.py  0024_merge_0023_auto_20210621_1304_0023_auto_20210622_0740.py  0025_alter_item_contract_address.py  0026_token_token_number.py  0027_alter_token_options.py  0028_rename_token_id_item_item_id.py  0029_item_is_super_featured.py  0030_alter_token_options.py  0034_itemfile.py  (+10 more)
api/nft/: asgi.py  settings.py  settings_local.py  urls.py  wsgi.py
api/users/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
api/utils/: permissions.py
(+7 files in other folders)
